# galyathecashier

./: CMakeLists.txt
include/engine/: app.h  color.h  context.h  events.h  math.h
include/engine/glad/: gl.h  gles2.h
include/game/: game.h
src/: main.cpp
src/engine/: app.cpp  color.cpp  context.cpp  events.cpp  math.cpp
src/engine/gl/: gl.c  gles2.c
src/game/: game.cpp
